# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Wed Aug  9 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Implemented ResultSet methods:
   <T> T getObject(int columnIndex, Class<T> type)
   <T> T getObject(String columnLabel, Class<T> type)
  They used to throw an SQLFeatureNotSupportedException.

* Thu Jul  6 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Removed deprecated nl.cwi.monetdb.*.* classes and package.
  Those classes were marked deprecated on 12 Nov 2020 from
  release 3.0 (released on 17 Feb 2021) onwards. It includes:
   nl.cwi.monetdb.client.JdbcClient.class
   nl.cwi.monetdb.jdbc.MonetDriver.class
   nl.cwi.monetdb.jdbc.types.INET.class
   nl.cwi.monetdb.jdbc.types.URL.class
   nl.cwi.monetdb.mcl.net.MapiSocket.class
  These classes are now removed permanently.
  Use the  org.monetdb.*  equivalents instead.

* Thu Jul  6 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Removed code to support old MonetDB servers Oct2014 or older. Those
  old servers did not yet have the system tables: sys.keywords and
  sys.table_types which are introduced in Jul2015 release. Those system
  tables are used by MonetDatabaseMetaData methods: getSQLKeywords(),
  getTableTypes() and getTables(). These 3 methods will now fail when
  used with those very old MonetDB servers.

* Wed Jul  5 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected implementation of Connection methods getClientInfo() and
  setClientInfo(). They used to get/set Connection properties instead
  of Client Info properties which was a incorrect. MonetDB does not
  support Client Info properties.

* Thu Jun 22 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected DatabaseMetaData method getClientProperties().
  It used to return connection properties instead of client info properties.

* Thu May  4 2023 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>